--- a/src/style/locationdetails.scss
+++ b/src/style/locationdetails.scss
@@ -1,67 +1,246 @@
-.location-name {
-    margin-left: 337px;
-    color: #FF6060;
-    margin-top: 30px;
-    font-size: 30px;
-    font-weight: 100;
+.location-container1 {
+  margin-left: 250px;
+  margin-right: 250px;
+  margin-top: 30px;
 }
 
-.location-wrapper-host {
-    display: flex;
-    justify-content: space-between;
-}
-
-.host-picture {
-    border-radius: 80px;
-    width: 64px;
-    height: 64px;
-    margin-top: 20px;
-    position: absolute;
-    left: 1500px;
-}
-
-.host-name {
-    color: #FF6060;
-    margin-top: 30px;
-    display: flex;
+.location-about {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 30px;
+  justify-content: space-between;
+  @media (max-width: 768px) {
     flex-direction: column;
-    position: absolute;
-    left: 1430px;
-    gap: 7px;
-}
-
-.appartment-location {
-    font-weight: bold;
-    position: absolute;
-    margin-left: 339px;
-    margin-top: 7px;
-}
-
-.location-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top:50px;
-    margin-left: 295px;
-    margin-right: 340px;
-}
-
-.location-tags-list {
-    display: flex;
-    flex-direction: row;
+  }
+  @media (max-width: 480px) {
     gap: 15px;
+  }
+  p {
+    color: #ff6060;
+    margin: 0;
+  }
+}
+
+.location-main-informations {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
+  margin-right: 25px;
+  @media (max-width: 480px) {
+    gap: 10px;
+  }
+}
+
+.location-title1 {
+  h1 {
+    color: #ff6060;
+    font-size: 36px;
+    font-weight: 500;
+    margin: 0;
+    @media (max-width: 768px) {
+      font-size: 26px;
+    }
+    @media (max-width: 480px) {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  }
+  p {
+    font-size: 18px;
+    color: black;
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
+    @media (max-width: 480px) {
+      font-size: 14px;
+    }
+  }
 }
 
 .location-tags {
-    background-color: #FF6060;
-    color: white;
-    padding: 5px 40px 5px 40px;
-    border-radius: 15px;
-    list-style: none;
-    font-weight: bold;
-}
-
-.location-wrapper-rating {
+  display: flex;
+  color: white;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 0 20px 0;
+  @media (max-width: 480px) {
+    margin: 0;
+  }
+  .tags-list {
     display: flex;
     flex-direction: row;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 10px;
+    flex-wrap: wrap;
+
+    li {
+      font-weight: bold;
+    }
+  }
+}
+
+.tag-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff6060;
+  padding: 2px 20px;
+  height: 25px;
+  width: fit-content;
+  min-width: fit-content;
+  border-radius: 12px;
+  font-size: 14px;
+  font-weight: 500;
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
+  @media (max-width: 480px) {
+    height: 18px;
+    font-size: 10px;
+    border-radius: 5px;
+  }
+}
+
+.host-informations {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  gap: 15px;
+  align-items: flex-end;
+  @media (max-width: 768px) {
+    width: 100%;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+  }
+  @media (max-width: 480px) {
+    flex-wrap: wrap;
+  }
+  p {
+    font-size: 18px;
+    font-weight: 500;
+    text-align: end;
+    @media (max-width: 768px) {
+      font-size: 15px;
+    }
+    @media (max-width: 480px) {
+      font-size: 12px;
+    }
+  }
+}
+
+.host-identity {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  @media (max-width: 480px) {
+    width: 110px;
+  }
+  img {
+    height: 64px;
+    width: 64px;
+    border-radius: 100%;
+    @media (max-width: 768px) {
+      height: 48px;
+      width: 48px;
+    }
+    @media (max-width: 480px) {
+      height: 32px;
+      width: 32px;
+    }
+  }
+}
+
+.accordions-wrapper-location {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 60px;
+  margin-bottom: 30px;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .accordion {
+    border-radius: 15px;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+  }
+}
+
+.accordions-wrapper-location .accordion__title {
+  border-radius: 10px;
+  @media (max-width: 768px) {
+    height: 40px;
+  }
+  @media (max-width: 480px) {
+    height: 30px;
+    border-radius: 5px;
+  }
+  p {
+    margin: 0;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
+    @media (max-width: 480px) {
+      font-size: 13px;
+    }
+  }
+
+  img {
+    width: 24px;
+    height: 13px;
+  }
+}
+
+.accordions-wrapper-location .accordion__description {
+  overflow: hidden;
+  font-size: 16px;
+  border-radius: 10px;
+  padding: 0 18px;
+  &.active {
+    padding: 70px 18px 25px 18px;
+    height: fit-content;
+  }
+  @media (max-width: 768px) {
+    height: 40px;
+    font-size: 15px;
+    &.active {
+      padding: 20px 20px;
+    }
+  }
+  @media (max-width: 480px) {
+    height: 30px;
+    font-size: 12px;
+    &.active {
+      padding: 15px 15px;
+    }
+  }
+  p {
+    font-size: 17px;
+    font-weight: 400;
+  }
+}
+
+.accordions-wrapper-location .accordion__description-details {
+  overflow: hidden;
+  &.active {
+    @media (max-width: 768px) {
+      padding-top: 40px;
+    }
+    @media (max-width: 480px) {
+      padding-top: 35px;
+    }
+  }
 }
